--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@babel/parser": "^7.12.11",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "strip": "^3.0.0",
+    "style-loader": "^2.0.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
   }
